--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,8 @@ cmake-build-*/
 *.iws
 
 # IntelliJ
+.idea/
+.idea
 out/
 
 # mpeltonen/sbt-idea plugin
@@ -157,3 +159,6 @@ dkms.conf
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#CLion Idea
+CMakeLists.txt
